build_error.log

> build
> vite build

vite v8.0.9 building client environment for production...
[plugin @laravel/vite-plugin-wayfinder] Types generated for actions, routes, form variants
[2Ktransforming...✓ 2749 modules transformed.
✗ Build failed in 19.60s
error during build:
Build failed with 3 errors:

[plugin vite:react-babel] /Users/mac/Herd/united cooperate bank/resources/js/layouts/admin-layout.tsx:10:4
SyntaxError: /Users/mac/Herd/united cooperate bank/resources/js/layouts/admin-layout.tsx: Identifier 'TrendingUp' has already been declared. (10:4)

   8 |     Bell,
   9 |     TrendingUp,
> 10 |     TrendingUp,
     |     ^
  11 |     User,
  12 |     UserPlus
  13 | } from 'lucide-react';
    at constructor (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:365:19)
    at TypeScriptParserMixin.raise (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:6599:19)
    at TypeScriptScopeHandler.declareName (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:4866:21)
    at TypeScriptParserMixin.declareNameFromIdentifier (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:7567:16)
    at TypeScriptParserMixin.checkIdentifier (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:7563:12)
    at TypeScriptParserMixin.checkLVal (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:7500:12)
    at TypeScriptParserMixin.finishImportSpecifier (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:14266:10)
    at TypeScriptParserMixin.parseImportSpecifier (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:14419:17)
    at TypeScriptParserMixin.parseImportSpecifier (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:10148:18)
    at TypeScriptParserMixin.parseNamedImportSpecifiers (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:14398:36)
    at TypeScriptParserMixin.parseImportSpecifiersAndAfter (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:14242:37)
    at TypeScriptParserMixin.parseImport (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:14235:17)
    at TypeScriptParserMixin.parseImport (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:9353:26)
    at TypeScriptParserMixin.parseStatementContent (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:12876:27)
    at TypeScriptParserMixin.parseStatementContent (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:9508:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseModuleItem (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:12744:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:13316:36)
    at TypeScriptParserMixin.parseBlockBody (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseProgram (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:12622:10)
    at TypeScriptParserMixin.parseTopLevel (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:12612:25)
    at TypeScriptParserMixin.parse (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:14488:25)
    at TypeScriptParserMixin.parse (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:10126:18)
    at parse (/Users/mac/Herd/united cooperate bank/node_modules/@babel/parser/lib/index.js:14522:38)
    at parser (/Users/mac/Herd/united cooperate bank/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/Users/mac/Herd/united cooperate bank/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/Users/mac/Herd/united cooperate bank/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/Users/mac/Herd/united cooperate bank/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/Users/mac/Herd/united cooperate bank/node_modules/gensync/index.js:261:32)
    at evaluateAsync (/Users/mac/Herd/united cooperate bank/node_modules/gensync/index.js:291:5)
    at /Users/mac/Herd/united cooperate bank/node_modules/gensync/index.js:93:9
    at new Promise (<anonymous>)
    at async (/Users/mac/Herd/united cooperate bank/node_modules/gensync/index.js:92:14)
    at stopHiding - secret - don't use this - v1 (/Users/mac/Herd/united cooperate bank/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at Module.transformAsync (/Users/mac/Herd/united cooperate bank/node_modules/@babel/core/lib/transform.js:43:77)
    at TransformPluginContextImpl.handler (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/@vitejs/plugin-react/dist/index.js:206:46)
    at async plugin (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/rolldown/dist/shared/bindingify-input-options-aPVaxNxQ.mjs:1172:16)
    at async plugin.<computed> (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/rolldown/dist/shared/bindingify-input-options-aPVaxNxQ.mjs:1612:12)
[31m[UNLOADABLE_DEPENDENCY] Error:[0m Could not load ../../../../resources/js/components/ui/textarea
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m resources/js/pages/admin/registrations/index.tsx:12:26 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [38;5;249mi[0m[38;5;249mm[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249me[0m[38;5;249mx[0m[38;5;249mt[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mr[0m[38;5;249mo[0m[38;5;249mm[0m[38;5;249m [0m"@/components/ui/textarea"[38;5;249m;[0m
 [38;5;240m   │[0m                          ─────────────┬────────────  
 [38;5;240m   │[0m                                       ╰────────────── No such file or directory (os error 2)
[38;5;246m────╯[0m

[31m[UNLOADABLE_DEPENDENCY] Error:[0m Could not load ../../../../resources/js/components/ui/table
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m resources/js/pages/admin/registrations/index.tsx:6:79 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249mi[0m[38;5;249mm[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mB[0m[38;5;249mo[0m[38;5;249md[0m[38;5;249my[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mC[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249ml[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mH[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249md[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mH[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mT[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mR[0m[38;5;249mo[0m[38;5;249mw[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mr[0m[38;5;249mo[0m[38;5;249mm[0m[38;5;249m [0m"@/components/ui/table"[38;5;249m;[0m
 [38;5;240m  │[0m                                                                               ───────────┬───────────  
 [38;5;240m  │[0m                                                                                          ╰───────────── No such file or directory (os error 2)
[38;5;246m───╯[0m

    at aggregateBindingErrorsIntoJsError (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/rolldown/dist/shared/error-DAA7ncC5.mjs:48:18)
    at unwrapBindingResult (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/rolldown/dist/shared/error-DAA7ncC5.mjs:18:128)
    at #build (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/rolldown/dist/shared/rolldown-build-BPKCFYpX.mjs:3317:34)
    at async buildEnvironment (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/vite/dist/node/chunks/node.js:32999:64)
    at async Object.build (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/vite/dist/node/chunks/node.js:33421:19)
    at async Object.buildApp (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/vite/dist/node/chunks/node.js:33418:153)
    at async CAC.<anonymous> (file:///Users/mac/Herd/united%20cooperate%20bank/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
